# SBM

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: gh-pages.yml  test.yml
docs/: reference.rst
docs/source/: conf.py  formalism.rst  generate_rst.py  imprementation.rst  index.rst  installation.rst  reference.rst  scanfields.rst  signalfields.rst
notebooks/: abs_pointing_offset.ipynb  add_scanfield.ipynb  bandpass_mismatch.ipynb  bandpass_mismatch_pipeline.ipynb  circular_pointing.ipynb  diff_gain_boresight.ipynb  diff_gain_channel.ipynb  diff_pointing_boresight.ipynb  diff_pointing_channel.ipynb  elliptical_beam_convolution.ipynb  generate_noise.ipynb  noise.ipynb  pipeline.ipynb
sbm/: CHANGELOG.md  __init__.py  convolver.py  install_db.py  main.py  pipelines.py  sbm.py  scan_fields.py  signal_fields.py  tools.py  version.py
sbm/.github/workflows/: test.yml
tests/: test.py  test_sbm.py
tests/reference/: abs_pointing_output_map.fits  abs_pointing_output_map_mdim_3.fits  abs_pointing_output_map_mdim_5.fits  abs_pointing_output_map_mdim_9.fits  diff_gain_output_map.fits  diff_gain_output_map_mdim_2.fits  diff_gain_output_map_mdim_3.fits  diff_pointing_output_map.fits  diff_pointing_output_map_mdim_2.fits  diff_pointing_output_map_mdim_4.fits  diff_pointing_output_map_mdim_6.fits  elliptical_beam_conv_output_map_mdim_2.fits  elliptical_beam_conv_output_map_mdim_3.fits  hwpip_output_map.fits  hwpip_output_map_mdim_3.fits  noise_map_100ukrts.fits  noise_map_100ukrts_hwp.fits  noise_map_100ukrts_hwp_mdim_2.fits  noise_map_100ukrts_hwp_mdim_3.fits  noise_map_100ukrts_hwp_mdim_4.fits  noise_map_100ukrts_mdim_2.fits  noise_map_100ukrts_mdim_3.fits  noise_map_100ukrts_mdim_4.fits  noise_map_100ukrts_mdim_5.fits
